[gd_scene load_steps=45 format=3 uid="uid://1wnfmblulhx0"]

[ext_resource type="Script" uid="uid://yhhjyldyui35" path="res://scripts/level_entities/player.gd" id="1_w51pe"]
[ext_resource type="PackedScene" uid="uid://bax7dybiuk6w3" path="res://scenes/level_entities/damage_marker.tscn" id="2_7odc1"]
[ext_resource type="PackedScene" uid="uid://vrb6kndkqrbq" path="res://scenes/level_entities/playerShield.tscn" id="2_y8s0b"]
[ext_resource type="Script" uid="uid://b0owr67wvdn0b" path="res://scripts/level_entities/PlayerCamera2D.gd" id="3_fns5h"]
[ext_resource type="PackedScene" uid="uid://dkwrosj64i8ur" path="res://scenes/level_entities/torpedo.tscn" id="3_newiu"]
[ext_resource type="Script" uid="uid://quybyrryuk3i" path="res://scenes/level_entities/player_health_component.gd" id="4_7pmes"]
[ext_resource type="Texture2D" uid="uid://cukwfy1ikknpy" path="res://assets/textures/ships/warpparticle.png" id="4_mse3f"]
[ext_resource type="Texture2D" uid="uid://biixbk5sucnfs" path="res://assets/textures/ships/ship_sprites.png" id="6_54us1"]
[ext_resource type="AudioStream" uid="uid://bpgj4l0ja8ua" path="res://assets/audio/warp_off.ogg" id="6_c035k"]
[ext_resource type="AudioStream" uid="uid://n4xp0acsyiaj" path="res://assets/audio/warp_on.ogg" id="6_ihea4"]
[ext_resource type="AudioStream" uid="uid://dbmkhj2s41sr2" path="res://assets/audio/ship_idle.ogg" id="7_8rbfi"]
[ext_resource type="Texture2D" uid="uid://baic84045hmx1" path="res://assets/textures/ships/warp_collapse.png" id="11_epgvs"]
[ext_resource type="AudioStream" uid="uid://ckky6ej2wn5oc" path="res://assets/audio/weapons/torpedo_light.ogg" id="12_4w7or"]
[ext_resource type="AudioStream" uid="uid://0oa411kw2o1a" path="res://assets/audio/weapons/torpedo_heavy.ogg" id="13_b4xtu"]
[ext_resource type="AudioStream" uid="uid://ns0cjj8n37hn" path="res://assets/audio/smallexplosion3.ogg" id="13_klvb2"]
[ext_resource type="Shader" uid="uid://xoe0le12ln0y" path="res://resources/Materials_Shaders/teleport_VERTICAL.gdshader" id="14_ke2ow"]
[ext_resource type="PackedScene" uid="uid://mc5mn1mhm67g" path="res://scenes/level_entities/laser_beam.tscn" id="15_ke2ow"]
[ext_resource type="AudioStream" uid="uid://dq11kuumua3bu" path="res://assets/audio/galaxy_warp_UP.ogg" id="16_hjmq1"]
[ext_resource type="AudioStream" uid="uid://w1mbhrv11vbo" path="res://assets/audio/warp_boom.ogg" id="17_e8fxd"]

[sub_resource type="Curve" id="Curve_p5fwl"]
_data = [Vector2(0, 0.78022), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_dad8g"]
curve = SubResource("Curve_p5fwl")

[sub_resource type="Gradient" id="Gradient_sdlsd"]
offsets = PackedFloat32Array(0.230769, 0.538462, 1)
colors = PackedColorArray(0.610075, 0.766952, 0.999999, 1, 0.658824, 0.776471, 0.603922, 1, 0.776723, 0.797925, 0.488551, 0.584314)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_iucyo"]
gradient = SubResource("Gradient_sdlsd")

[sub_resource type="Curve" id="Curve_hvu0f"]
_limits = [-200.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, -200), 0.0, 0.0, 0, 0, Vector2(1, 200), 560.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_0g7us"]
curve = SubResource("Curve_hvu0f")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ai1hp"]
emission_shape = 1
emission_sphere_radius = 28.0
direction = Vector3(0, 1, 0)
spread = 35.0
flatness = 1.0
initial_velocity_min = 120.0
initial_velocity_max = 120.0
gravity = Vector3(0, 0, 0)
linear_accel_curve = SubResource("CurveTexture_0g7us")
scale_min = 0.5
color = Color(0.32549, 1, 1, 1)
color_ramp = SubResource("GradientTexture1D_iucyo")
alpha_curve = SubResource("CurveTexture_dad8g")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6yxh3"]
shader = ExtResource("14_ke2ow")
shader_parameter/progress = 0.0
shader_parameter/noise_density = 60.0
shader_parameter/beam_size = 0.15
shader_parameter/color = Color(0, 1.02, 1.2, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_wg5l6"]
atlas = ExtResource("6_54us1")
region = Rect2(96, 144, 48, 48)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_rry4s"]
atlas = ExtResource("11_epgvs")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_df2ky"]
atlas = ExtResource("11_epgvs")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pt208"]
atlas = ExtResource("11_epgvs")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vykux"]
atlas = ExtResource("11_epgvs")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i02aa"]
atlas = ExtResource("11_epgvs")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_acuc2"]
atlas = ExtResource("11_epgvs")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8e03n"]
atlas = ExtResource("11_epgvs")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik23e"]
atlas = ExtResource("11_epgvs")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_giqcb"]
atlas = ExtResource("11_epgvs")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j21v0"]
atlas = ExtResource("11_epgvs")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eslpw"]
atlas = ExtResource("11_epgvs")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qh5g"]
atlas = ExtResource("11_epgvs")
region = Rect2(704, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_88nc2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rry4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_df2ky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pt208")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vykux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i02aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acuc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e03n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik23e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giqcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j21v0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eslpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qh5g")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"warp_collapse",
"speed": 15.0
}]

[sub_resource type="Animation" id="Animation_crmot"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PlayerSprite:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_27up3"]
resource_name = "flash_anim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PlayerSprite:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gd61k"]
_data = {
&"RESET": SubResource("Animation_crmot"),
&"flash_anim": SubResource("Animation_27up3")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
scale = Vector2(1.25, 1.25)
collision_layer = 2
collision_mask = 11
slide_on_ceiling = false
platform_floor_layers = 1
platform_wall_layers = 1
script = ExtResource("1_w51pe")
damage_indicator = ExtResource("2_7odc1")
torpedo_scene = ExtResource("3_newiu")
base_max_speed = 600

[node name="health_component" type="Node" parent="."]
script = ExtResource("4_7pmes")

[node name="GalaxyParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, 19)
emitting = false
amount = 500
amount_ratio = 0.01
texture = ExtResource("4_mse3f")
process_material = SubResource("ParticleProcessMaterial_ai1hp")

[node name="Muzzle" type="Node2D" parent="."]
position = Vector2(0, -12)

[node name="playerShield" parent="." instance=ExtResource("2_y8s0b")]
scale = Vector2(2.5, 2.5)

[node name="Camera2D" type="Camera2D" parent="."]
limit_smoothed = true
script = ExtResource("3_fns5h")

[node name="PlayerSprite" type="Sprite2D" parent="."]
show_behind_parent = true
material = SubResource("ShaderMaterial_6yxh3")
position = Vector2(1, -4)
texture = SubResource("AtlasTexture_wg5l6")

[node name="Laser" parent="." instance=ExtResource("15_ke2ow")]
show_behind_parent = true

[node name="regen_timer" type="Timer" parent="."]

[node name="hitbox_area" type="Area2D" parent="." groups=["player"]]
collision_layer = 64
collision_mask = 512

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hitbox_area" groups=["player"]]

[node name="WorldCollisionShape" type="CollisionPolygon2D" parent="." groups=["player"]]

[node name="warp_anim" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.517647)
position = Vector2(0, 3)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_88nc2")
animation = &"warp_collapse"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Audio")
libraries = {
&"": SubResource("AnimationLibrary_gd61k")
}

[node name="Audio" type="Node2D" parent="."]

[node name="overdrive_on" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("6_ihea4")
volume_db = -14.0
pitch_scale = 0.7

[node name="overdrive_off" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("6_c035k")
volume_db = -15.0

[node name="ship_idle" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("7_8rbfi")
volume_db = -25.0

[node name="PlayerDieSound" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("13_klvb2")

[node name="LightTorpedo" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("12_4w7or")
volume_db = -10.0

[node name="HeavyTorpedo" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("13_b4xtu")
volume_db = -16.0
pitch_scale = 1.09

[node name="Galaxy_warp" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("16_hjmq1")

[node name="warp_boom" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("17_e8fxd")
volume_db = -7.0

[node name="Projectiles" type="Node" parent="."]

[node name="intersection_line" type="Line2D" parent="."]
width = 15.0

[connection signal="laserEnded" from="Laser" to="." method="_on_laser_ended"]
[connection signal="area_entered" from="hitbox_area" to="." method="_on_hitbox_area_entered"]
